fix: remove extra spaces in index

--- a/index.html
+++ b/index.html
@@ -13,7 +13,6 @@
 </head>
 
 <body>
-
     <article>
         <div class="article__wrapper">
             <div class="article__wrapper--container">
@@ -26,26 +25,22 @@
                         <h1>Log In to Admin Panel</h1>
                         <p>Enter your phone number and password below</p>
                     </div>
-
                     <div class="container__content--body">
-
                         <div class="input__container">
                             <label for="user_number">Phone Number</label>
                             <input type="number" placeholder="Enter your phone number" id="user_number"
                                 class="input__styles" />
                         </div>
-
                         <div class="input__container">
                             <label for="user_password">Password</label>
                             <input type="password" placeholder="Enter your password" id="user_password"
                                 class="input__styles" />
                         </div>
-
                         <div class="input__container">
                             <button class="button__styles"><img src="accets/images/icons/index-input-svg-icon.svg"
-                                    alt="image" class="button__icon" /> <a href="dashboard.html" class="login__a">Log In</a></button>
+                                    alt="image" class="button__icon" /> <a href="dashboard.html" class="login__a">Log
+                                    In</a></button>
                         </div>
-
                         <div class="signup__container">
                             <p>Don’t have an account?</p>
                             <button class="signup__button">Sign up</button>
