--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-    <article>
+    <section>
         <div class="article__wrapper">
             <div class="article__wrapper--container">
                 <div>
@@ -49,7 +49,7 @@
                 </div>
             </div>
         </div>
-    </article>
+    </section>
 </body>
 
 </html>
